infra/application/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: portfolio-ingress
  namespace: portfolio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt

spec:
  ingressClassName: nginx
  rules:
    - host: bastian-somon.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
             service:
              name: portfolio
              port:
                number: 80
    - host: portfolio.bastian-somon.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio
                port:
                  number: 80
  tls:
    - hosts:
        - bastian-somon.fr
        - '*.bastian-somon.fr'
      secretName: letsencrypt-tls-cert
